--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,9 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+# .terragrunt-cache directory
+.terragrunt-cache
+
+# Serena MCP
+.serena/
