--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,13 +32,10 @@ jobs:
     with:
       search-path: .
       terraform-version: latest
-      terragrunt-version: latest
+      # terragrunt-version: latest
   terraform-lock-files-upgrade-and-pr-merge:
     if: >
-      (
-        github.event_name == 'pull_request'
-        && (startswith(github.head_ref, 'dependabot/terraform/') || startswith(github.head_ref, 'renovate/'))
-      ) || (github.event_name == 'workflow_dispatch' && inputs.workflow == 'upgrade')
+      github.event_name == 'workflow_dispatch' && inputs.workflow == 'upgrade'
     permissions:
       contents: write
       pull-requests: write
@@ -52,7 +49,7 @@ jobs:
       merge-pr: ${{ github.event_name == 'pull_request' }}
     secrets:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  dependabot-auto-merge:
+  pendabot-auto-merge:
     if: >
       github.event_name == 'pull_request'
       && github.actor == 'dependabot[bot]'
