--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
       merge-pr: ${{ github.event_name == 'pull_request' }}
     secrets:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  pendabot-auto-merge:
+  dependabot-auto-merge:
     if: >
       github.event_name == 'pull_request'
       && github.actor == 'dependabot[bot]'
