--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,7 @@ updates:
     open-pull-requests-limit: 10
   - package-ecosystem: terraform
     directories:
+      - /envs/dev/
       - /modules/wif/
     schedule:
       interval: daily
