--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,20 +32,21 @@ jobs:
     with:
       search-path: .
       terraform-version: latest
-      # terragrunt-version: latest
   terraform-lock-files-upgrade-and-pr-merge:
     if: >
-      github.event_name == 'workflow_dispatch' && inputs.workflow == 'upgrade'
+      (
+        github.event_name == 'pull_request'
+        && (startswith(github.head_ref, 'dependabot/terraform/') || startswith(github.head_ref, 'renovate/'))
+      ) || (github.event_name == 'workflow_dispatch' && inputs.workflow == 'upgrade')
     permissions:
       contents: write
       pull-requests: write
     uses: dceoy/gh-actions-for-devops/.github/workflows/terraform-lock-files-upgrade-and-pr-merge.yml@main
     with:
-      terragrunt-working-directories: envs/dev
+      terraform-working-directories: modules/wif
       terraform-version: latest
       merged-pr-branch-prefix: ${{ startswith(github.head_ref, 'dependabot/terraform/') && 'dependabot/terraform/' || null }}
       search-path-for-lint-and-scan: .
-      terragrunt-version: latest
       merge-pr: ${{ github.event_name == 'pull_request' }}
     secrets:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
